--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "testowankolel/socute",
+    "name": "testowankolel/notoniezle2",
     "description": "Some testing stuff",
     "minimum-stability": "dev",
     "license": "MIT",
